--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
 .blog-preview {
   padding: 10px 16px;
   margin: 20px 0;
-  border-bottom: 1px solid #dcdcdc;
+  border-bottom: 1px solid #f8f8f8;
 }
 .blog-preview:hover {
   box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
