--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@
 
 /* blog previews / list */
 .blog-preview {
+    position: relative;
     padding: 10px 16px;
     margin: 20px 0;
     border-bottom: 1px solid #f8f8f8;
@@ -50,6 +51,24 @@
 }
 .blog-preview a{
     text-decoration: none;
+}
+.blog-preview button {
+    position: absolute;
+    bottom: auto;
+    left: auto;
+    top: 25%;
+    right: 10px;
+    background: white;
+    border: 2px solid #f2f2f2;
+    border-radius: 5px;
+    padding-top: 5px;
+    cursor: pointer;
+}
+.blog-preview button:hover {
+    border: 2px solid #f1356d;
+}
+.blog-preview button svg {
+    fill: #f1356d;
 }
 
 /* blog details page */
